--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - 7474:7474
       - 7687:7687
     volumes:
-    - ./data:/data
-    - ./import:/import
+    - $HOME/neo4j/data:/data
+    - $HOME/neo4j/import:/import
   node-server:
     container_name: products-server
     build: ./node-server/
@@ -36,6 +36,3 @@ services:
       SERVER_IP: localhost
     ports:
       - 3000:3000
-volumes:
-  neo4j-data:
-  neo4j-import:
