--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Server for SDC",
   "main": "index.js",
   "scripts": {
-    "start": "node ./node-server"
+    "start": "node index.js"
   },
   "author": "TK",
   "license": "UNLICENSED",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "neo4j-driver": "^4.2.3"
   }
